<resources>
    <string name="app_name">LocationServer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="username">User name</string>
    <string name="welcome">Welcome! Please give yourself a name to start finding your friends</string>
    <string name="find_friends"> Find My Friends! </string>
    <string name="back">Back</string>
    <string name="add_group">Add A New Group</string>
    <string name="group_name">Group Name </string>
    <string name="add">Add</string>

</resources>
